// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"deleteOriginalAssets" option should delete original assets and keep source maps with option "keep-source-map": assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.5ea58b5a4311bcf28d3b.js",
    134,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  Array [
    "main.002d7636573d18d7a564.js",
    4048,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 4048,
    },
  ],
  Array [
    "main.002d7636573d18d7a564.js.map",
    13064,
    Object {
      "development": true,
      "size": 13064,
    },
  ],
]
`;

exports[`"deleteOriginalAssets" option should delete original assets and keep source maps with option "keep-source-map": errors 1`] = `Array []`;

exports[`"deleteOriginalAssets" option should delete original assets and keep source maps with option "keep-source-map": warnings 1`] = `Array []`;

exports[`"deleteOriginalAssets" option should work and delete original assets: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73160,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.55e6e9a872bcc7d4b226.js.gz",
    134,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  Array [
    "main.321e08ae64316e7496a3.js.gz",
    4004,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 4004,
    },
  ],
]
`;

exports[`"deleteOriginalAssets" option should work and delete original assets: errors 1`] = `Array []`;

exports[`"deleteOriginalAssets" option should work and delete original assets: warnings 1`] = `Array []`;

exports[`"deleteOriginalAssets" option should work and do not report errors on duplicate assets when original assets were removed: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.55e6e9a872bcc7d4b226.js",
    134,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  Array [
    "main.321e08ae64316e7496a3.js",
    4004,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 4004,
    },
  ],
]
`;

exports[`"deleteOriginalAssets" option should work and do not report errors on duplicate assets when original assets were removed: errors 1`] = `Array []`;

exports[`"deleteOriginalAssets" option should work and do not report errors on duplicate assets when original assets were removed: warnings 1`] = `Array []`;

exports[`"deleteOriginalAssets" option should work and keep original assets by default: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.55e6e9a872bcc7d4b226.js",
    194,
    Object {
      "chunkhash": "55e6e9a872bcc7d4b226",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.55e6e9a872bcc7d4b226.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "async.async.55e6e9a872bcc7d4b226.js.gz",
    134,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  Array [
    "main.321e08ae64316e7496a3.js",
    16052,
    Object {
      "chunkhash": "321e08ae64316e7496a3",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.321e08ae64316e7496a3.js.gz",
      },
      "size": 16052,
    },
  ],
  Array [
    "main.321e08ae64316e7496a3.js.gz",
    4004,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 4004,
    },
  ],
]
`;

exports[`"deleteOriginalAssets" option should work and keep original assets by default: errors 1`] = `Array []`;

exports[`"deleteOriginalAssets" option should work and keep original assets by default: warnings 1`] = `Array []`;

exports[`"deleteOriginalAssets" option should work and keep original assets: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73160,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.55e6e9a872bcc7d4b226.js",
    194,
    Object {
      "chunkhash": "55e6e9a872bcc7d4b226",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.55e6e9a872bcc7d4b226.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "async.async.55e6e9a872bcc7d4b226.js.gz",
    134,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  Array [
    "main.321e08ae64316e7496a3.js",
    16052,
    Object {
      "chunkhash": "321e08ae64316e7496a3",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.321e08ae64316e7496a3.js.gz",
      },
      "size": 16052,
    },
  ],
  Array [
    "main.321e08ae64316e7496a3.js.gz",
    4004,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 4004,
    },
  ],
]
`;

exports[`"deleteOriginalAssets" option should work and keep original assets: errors 1`] = `Array []`;

exports[`"deleteOriginalAssets" option should work and keep original assets: warnings 1`] = `Array []`;

exports[`"deleteOriginalAssets" option should work and report errors on duplicate assets: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.55e6e9a872bcc7d4b226.js",
    134,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  Array [
    "main.321e08ae64316e7496a3.js",
    4004,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 4004,
    },
  ],
]
`;

exports[`"deleteOriginalAssets" option should work and report errors on duplicate assets: errors 1`] = `
Array [
  "Error: Conflict: Multiple assets emit different content to the same filename 23fc1d3ac606d117e05a140e0de79806.svg",
  "Error: Conflict: Multiple assets emit different content to the same filename async.async.55e6e9a872bcc7d4b226.js",
  "Error: Conflict: Multiple assets emit different content to the same filename main.321e08ae64316e7496a3.js",
]
`;

exports[`"deleteOriginalAssets" option should work and report errors on duplicate assets: warnings 1`] = `Array []`;
